publicación de evento nuevo en rabbitmq

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+server.port=8090
+qtx.progEventosService.messageBroker.host=localhost
+qtx.progEventosService.messageBroker.exchangeEvtos=eventosNuevos
